--- a/manifest.plist
+++ b/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://www.zesentec.com/testapp/zesenslots-mobile.ipa</string>
+					<string>http://192.168.1.4/app/ios/0.0.1/zesenslots-mobile.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://www.zesentec.com/testapp/gold_1.png</string>
+					<string>http://192.168.1.4/app/ios/0.0.1/gold_1.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://www.zesentec.com/testapp/gold_1.png</string>
+					<string>http://192.168.1.4/app/ios/0.0.1/gold_1.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
